--- a/HTML/lien_contact.html
+++ b/HTML/lien_contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="Pressbook.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li style="left"><a href="lien_portfolio.html">Portfolio</a></li>
         <li style="float:center"><a href="cv_audrey.html">Curriculum Vitae</a></li>
         <li style="float:right"><a class="active" href="lien_contact.html">Contact</a></li>
