--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>GalloAudreyPortfolio</title>
-    <link rel="stylesheet" href="D:\Web\Pressbook_internet\pressbook\CSS\Pressbook.css" />
+    <link rel="stylesheet" href="CSS\Pressbook.css" />
 </head>
 <body>  
     <ul>
