reparer lien index

--- a/HTML/travail_8.html
+++ b/HTML/travail_8.html
@@ -8,7 +8,7 @@
 <body>
 
        <ul>
-            <li><a href="Pressbook.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li style="left"><a class="active" href="lien_portfolio.html">Portfolio</a></li>
             <li style="float:center"><a href="cv_audrey.html">Curriculum Vitae</a></li>
             <li style="float:right"><a href="lien_contact.html">Contact</a></li>
