--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </ul>
 
     <div class="entete">
-        <img src="D:\Web\Pressbook_internet\pressbook\Photos\32.jpg" alt="photo_1">
+        <img src="Photos\32.jpg" alt="photo_1">
         <div class="titre">Infographie paysagère</H1></div>
         <div class="nom_prenom">Gallo Audrey</H1></div>
     </div>
