--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>  
     <ul>
-        <li><a class="active" href="Pressbook.html">Home</a></li>
-        <li style="left"><a href="lien_portfolio.html">Portfolio</a></li>
-        <li style="float:center"><a href="cv_audrey.html">Curriculum Vitae</a></li>
-        <li style="float:right"><a href="lien_contact.html">Contact</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
+        <li style="left"><a href="html/lien_portfolio.html">Portfolio</a></li>
+        <li style="float:center"><a href="html/cv_audrey.html">Curriculum Vitae</a></li>
+        <li style="float:right"><a href="html/lien_contact.html">Contact</a></li>
     </ul>
 
     <div class="entete">
