--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>  
     <ul>
         <li><a class="active" href="index.html">Home</a></li>
-        <li style="left"><a href="html/lien_portfolio.html">Portfolio</a></li>
-        <li style="float:center"><a href="html/cv_audrey.html">Curriculum Vitae</a></li>
-        <li style="float:right"><a href="html/lien_contact.html">Contact</a></li>
+        <li style="left"><a href="HTML/lien_portfolio.html">Portfolio</a></li>
+        <li style="float:center"><a href="HTML/cv_audrey.html">Curriculum Vitae</a></li>
+        <li style="float:right"><a href="HTML/lien_contact.html">Contact</a></li>
     </ul>
 
     <div class="entete">
