correction lien href head

--- a/HTML/lien_contact.html
+++ b/HTML/lien_contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>GalloAudreyPortfolio</title>
-    <link rel="stylesheet" href="D:\Web\Pressbook_internet\pressbook\CSS\lien_contact.css" />
+    <link rel="stylesheet" href="..\CSS\lien_contact.css" />
 </head>
 <body>
     <ul>
