--- a/HTML/travail_8.html
+++ b/HTML/travail_8.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>GalloAudreyPortfolio</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="D:\Web\Pressbook_internet\pressbook\CSS\travail_8.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="..\CSS\travail_8.css" />
 </head>
 <body>
 
