correction image lien

--- a/HTML/lien_contact.html
+++ b/HTML/lien_contact.html
@@ -24,7 +24,7 @@
     </div>
 
     <p>
-        <img src="D:\Web\Pressbook_internet\pressbook\Photos\20181029_164538.jpg" alt="photo_1">
+        <img src="../Photos\20181029_164538.jpg" alt="photo_1">
     </p>
 </body>
 </html>
