--- a/HTML/travail_10.html
+++ b/HTML/travail_10.html
@@ -23,14 +23,14 @@
     </div>  
 
         <div id="photo_1">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\23.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\23.png" alt="photo_1">
+                <a target="_blank" href="..\Photos\23.png">
+            <img src="..\Photos\23.png" alt="photo_1">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\24.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\24.png" alt="photo_2">
+        <a target="_blank" href="..\Photos\24.png">
+            <img src="..\Photos\24.png" alt="photo_2">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\22.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\22.png" alt="photo_3">
+        <a target="_blank" href="..\Photos\22.png">
+            <img src="..\Photos\22.png" alt="photo_3">
         </a>
         </div>
 
