--- a/HTML/travail_12.html
+++ b/HTML/travail_12.html
@@ -25,17 +25,17 @@
     </div>  
 
         <div id="photo_1">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\Capture 3.PNG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\Capture 3.PNG" alt="photo_1">
+                <a target="_blank" href="..\Photos\Capture 3.PNG">
+            <img src="..\Photos\Capture 3.PNG" alt="photo_1">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\Capture 9.PNG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\Capture 9.PNG" alt="photo_2">
+        <a target="_blank" href="..\Photos\Capture 9.PNG">
+            <img src="..\Photos\Capture 9.PNG" alt="photo_2">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\Capture 6.PNG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\Capture 6.PNG" alt="photo_3">
+        <a target="_blank" href="..\Photos\Capture 6.PNG">
+            <img src="..\Photos\Capture 6.PNG" alt="photo_3">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\Capture 7.PNG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\Capture 7.PNG" alt="photo_4">
+        <a target="_blank" href="..\Photos\Capture 7.PNG">
+            <img src="..\Photos\Capture 7.PNG" alt="photo_4">
         </a>
         </div>
 
