--- a/HTML/travail_3.html
+++ b/HTML/travail_3.html
@@ -25,17 +25,17 @@
     </div>  
 
         <div id="photo_1">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\73.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\73.png" alt="photo_1">
+                <a target="_blank" href="..\Photos\73.png">
+            <img src="..\Photos\73.png" alt="photo_1">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\54.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\54.png" alt="photo_2">
+        <a target="_blank" href="..\Photos\54.png">
+            <img src="..\Photos\54.png" alt="photo_2">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\52.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\52.png" alt="photo_3">
+        <a target="_blank" href="..\Photos\52.png">
+            <img src="..\Photos\52.png" alt="photo_3">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\53.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\53.png" alt="photo_4">
+        <a target="_blank" href="..\Photos\53.png">
+            <img src="..\Photos\53.png" alt="photo_4">
         </a>
         </div>
 
