--- a/HTML/travail_4.html
+++ b/HTML/travail_4.html
@@ -25,11 +25,11 @@
         </div>  
 
             <div id="photo_1">
-                    <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\66.PNG">
-                <img src="D:\Web\Pressbook_internet\pressbook\Photos\66.PNG" alt="photo_1">
+                    <a target="_blank" href="..\Photos\66.PNG">
+                <img src="..\Photos\66.PNG" alt="photo_1">
             </a>
-            <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\67.PNG">
-                <img src="D:\Web\Pressbook_internet\pressbook\Photos\67.PNG" alt="photo_2">
+            <a target="_blank" href="..\Photos\67.PNG">
+                <img src="..\Photos\67.PNG" alt="photo_2">
             </a>
             </div>
 
