--- a/HTML/travail_5.html
+++ b/HTML/travail_5.html
@@ -25,11 +25,11 @@
     </div>  
 
         <div id="photo_1">
-            <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\69.PNG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\69.PNG" alt="photo_2">
+            <a target="_blank" href="..\Photos\69.PNG">
+            <img src="..\Photos\69.PNG" alt="photo_2">
         </a>
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\70.PNG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\70.PNG" alt="photo_1">
+                <a target="_blank" href="..\Photos\70.PNG">
+            <img src="..\Photos\70.PNG" alt="photo_1">
         </a>
         </div>
 
@@ -38,11 +38,11 @@
     </div> 
 
         <div id="photo_3">
-            <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\68.PNG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\68.PNG" alt="photo_4">
+            <a target="_blank" href="..\Photos\68.PNG">
+            <img src="..\Photos\68.PNG" alt="photo_4">
         </a>
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\71.PNG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\71.PNG" alt="photo_3">
+                <a target="_blank" href="..\Photos\71.PNG">
+            <img src="..\Photos\71.PNG" alt="photo_3">
         </a>
         </div>
 
