--- a/HTML/travail_6.html
+++ b/HTML/travail_6.html
@@ -25,11 +25,11 @@
     </div>  
 
         <div id="photo_1">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\50.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\50.png" alt="photo_1">
+                <a target="_blank" href="..\Photos\50.png">
+            <img src="..\Photos\50.png" alt="photo_1">
         </a>
-         <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\49.PNG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\49.PNG" alt="photo_2">
+         <a target="_blank" href="..\Photos\49.PNG">
+            <img src="..\Photos\49.PNG" alt="photo_2">
         </a>
         </div>
 
