--- a/HTML/travail_8.html
+++ b/HTML/travail_8.html
@@ -25,11 +25,11 @@
     </div>  
 
         <div id="photo_1">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\GalloAudreyCotationPP.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\GalloAudreyCotationPP.jpg" alt="photo_1">
+                <a target="_blank" href="..\Photos\GalloAudreyCotationPP.jpg">
+            <img src="..\Photos\GalloAudreyCotationPP.jpg" alt="photo_1">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\GardeCorp cotation.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\GardeCorp cotation.jpg" alt="photo_2">
+        <a target="_blank" href="..\Photos\GardeCorp cotation.jpg">
+            <img src="..\Photos\GardeCorp cotation.jpg" alt="photo_2">
         </a>
         </div>
 
