--- a/HTML/cv_audrey.html
+++ b/HTML/cv_audrey.html
@@ -3,7 +3,7 @@
 	<head>
 			<meta charset="utf-8" />
 			<title>GalloAudreyPortfolio</title>
-			<link rel="stylesheet" href="D:\Web\Pressbook_internet\pressbook\CSS\cv_audrey.css" />
+			<link rel="stylesheet" href="..\CSS\cv_audrey.css" />
 	</head>
 	
 		<body>
