--- a/HTML/travail_11.html
+++ b/HTML/travail_11.html
@@ -23,39 +23,39 @@
     </div>  
 
         <div id="photo_1">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\44.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\44.png" alt="photo_1">
+                <a target="_blank" href="..\Photos\44.png">
+            <img src="..\Photos\44.png" alt="photo_1">
         </a>
         </div>
 
     <p>Nous pouvons observer un premier aménagement consernant l’entrée de la villa avec un emplacements voitures ainsi que le parvis d’une maison. </p>
 
         <div id="photo_2">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\43.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\43.png" alt="photo_2">
+                <a target="_blank" href="..\Photos\43.png">
+            <img src="..\Photos\43.png" alt="photo_2">
         </a>
         </div>
 
     <p>Nous pouvons observer un second aménagement consernant l’arrière de la villa avec un espace terrasse et piscine et un espace jardin avec un potager.</p>
 
         <div id="photo_3">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\39.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\39.png" alt="photo_3">
+                <a target="_blank" href="..\Photos\39.png">
+            <img src="..\Photos\39.png" alt="photo_3">
         </a>
-            <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\46.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\46.png" alt="photo_4">
+            <a target="_blank" href="..\Photos\46.png">
+            <img src="..\Photos\46.png" alt="photo_4">
         </a>
-            <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\40.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\40.png" alt="photo_5">
+            <a target="_blank" href="..\Photos\40.png">
+            <img src="..\Photos\40.png" alt="photo_5">
         </a>
-            <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\42.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\42.png" alt="photo_6">
+            <a target="_blank" href="..\Photos\42.png">
+            <img src="..\Photos\42.png" alt="photo_6">
         </a>
-            <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\48.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\48.png" alt="photo_7">
+            <a target="_blank" href="..\Photos\48.png">
+            <img src="..\Photos\48.png" alt="photo_7">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\41.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\41.png" alt="photo_8">
+        <a target="_blank" href="..\Photos\41.png">
+            <img src="..\Photos\41.png" alt="photo_8">
         </a>
         </div>
 
