--- a/HTML/travail_13.html
+++ b/HTML/travail_13.html
@@ -21,8 +21,8 @@
     <p>Le but a été de créer un DCE.</p>  
 
         <div id="photo_1">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\GALLO TP - Toit Lorrain - Plan DCE.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\GALLO TP - Toit Lorrain - Plan DCE.jpg" alt="photo_1">
+                <a target="_blank" href="..\Photos\GALLO TP - Toit Lorrain - Plan DCE.jpg">
+            <img src="..\Photos\GALLO TP - Toit Lorrain - Plan DCE.jpg" alt="photo_1">
         </a>
         </div>
 
