--- a/HTML/travail_14.html
+++ b/HTML/travail_14.html
@@ -25,14 +25,14 @@
     </div>  
 
         <div id="photo_1">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\Arbres en perspective-exo étudiants4.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\Arbres en perspective-exo étudiants4.png" alt="photo_1">
+                <a target="_blank" href="..\Photos\Arbres en perspective-exo étudiants4.png">
+            <img src="..\Photos\Arbres en perspective-exo étudiants4.png" alt="photo_1">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\Arbres en perspective-exo étudiants1.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\Arbres en perspective-exo étudiants1.png" alt="photo_2">
+        <a target="_blank" href="..\Photos\Arbres en perspective-exo étudiants1.png">
+            <img src="..\Photos\Arbres en perspective-exo étudiants1.png" alt="photo_2">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\Arbres en perspective-exo étudiants.png">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\Arbres en perspective-exo étudiants.png" alt="photo_3">
+        <a target="_blank" href="..\Photos\Arbres en perspective-exo étudiants.png">
+            <img src="..\Photos\Arbres en perspective-exo étudiants.png" alt="photo_3">
         </a>
         </div>
 
