--- a/HTML/travail_2.html
+++ b/HTML/travail_2.html
@@ -24,20 +24,20 @@
     </div>  
 
         <div id="photo_1">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\1.JPG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\1.JPG" alt="photo_1">
+                <a target="_blank" href="..\Photos\1.JPG">
+            <img src="..\Photos\1.JPG" alt="photo_1">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\3.JPG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\3.JPG" alt="photo_2">
+        <a target="_blank" href="..\Photos\3.JPG">
+            <img src="..\Photos\3.JPG" alt="photo_2">
         </a>
-         <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\5.JPG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\5.JPG" alt="photo_3">
+         <a target="_blank" href="..\Photos\5.JPG">
+            <img src="..\Photos\5.JPG" alt="photo_3">
         </a>
-         <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\6.JPG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\6.JPG" alt="photo_4">
+         <a target="_blank" href="..\Photos\6.JPG">
+            <img src="..\Photos\6.JPG" alt="photo_4">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\7.JPG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\7.JPG" alt="photo_5">
+        <a target="_blank" href="..\Photos\7.JPG">
+            <img src="..\Photos\7.JPG" alt="photo_5">
         </a>
         </div>
         
