--- a/HTML/travail_7.html
+++ b/HTML/travail_7.html
@@ -25,8 +25,8 @@
     </div>  
 
         <div id="photo_1">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\Gallo Audrey croquis.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\Gallo Audrey croquis.jpg" alt="photo_1">
+                <a target="_blank" href="..\Photos\Gallo Audrey croquis.jpg">
+            <img src="..\Photos\Gallo Audrey croquis.jpg" alt="photo_1">
         </a>
         </div>
 
