--- a/HTML/travail_9.html
+++ b/HTML/travail_9.html
@@ -21,8 +21,8 @@
     </div>  
 
         <div id="photo_1">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\28.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\28.jpg" alt="photo_1">
+                <a target="_blank" href="..\Photos\28.jpg">
+            <img src="..\Photos\28.jpg" alt="photo_1">
         </a>
         </div>
 
@@ -31,8 +31,8 @@
     </div>  
 
         <div id="photo_2">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\29.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\29.jpg" alt="photo_2">
+                <a target="_blank" href="..\Photos\29.jpg">
+            <img src="..\Photos\29.jpg" alt="photo_2">
         </a>
         </div>
 
@@ -41,8 +41,8 @@
     </div>  
 
         <div id="photo_3">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\51.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\51.jpg" alt="photo_3">
+                <a target="_blank" href="..\Photos\51.jpg">
+            <img src="..\Photos\51.jpg" alt="photo_3">
         </a>
         </div>
 
@@ -51,8 +51,8 @@
     </div>  
 
         <div id="photo_4">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\63.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\63.jpg" alt="photo_4">
+                <a target="_blank" href="..\Photos\63.jpg">
+            <img src="..\Photos\63.jpg" alt="photo_4">
         </a>
         </div>
 
@@ -61,8 +61,8 @@
     </div>  
 
         <div id="photo_5">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\62.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\62.jpg" alt="photo_5">
+                <a target="_blank" href="..\Photos\62.jpg">
+            <img src="..\Photos\62.jpg" alt="photo_5">
         </a>
     </div>
 
@@ -71,8 +71,8 @@
     </div>  
 
         <div id="photo_6">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\33.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\33.jpg" alt="photo_6">
+                <a target="_blank" href="..\Photos\33.jpg">
+            <img src="..\Photos\33.jpg" alt="photo_6">
         </a>
         </div>
 
@@ -81,8 +81,8 @@
     </div>  
 
         <div id="photo_7">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\31.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\31.jpg" alt="photo_7">
+                <a target="_blank" href="..\Photos\31.jpg">
+            <img src="..\Photos\31.jpg" alt="photo_7">
         </a>
         </div>
 
@@ -91,11 +91,11 @@
     </div>  
 
         <div id="photo_8">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\60.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\60.jpg" alt="photo_8">
+                <a target="_blank" href="..\Photos\60.jpg">
+            <img src="..\Photos\60.jpg" alt="photo_8">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\61.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\61.jpg" alt="photo_9">
+        <a target="_blank" href="..\Photos\61.jpg">
+            <img src="..\Photos\61.jpg" alt="photo_9">
         </a>
         </div>
 
@@ -104,17 +104,17 @@
     </div>  
 
         <div id="photo_10">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\64.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\64.jpg" alt="photo_10">
+                <a target="_blank" href="..\Photos\64.jpg">
+            <img src="..\Photos\64.jpg" alt="photo_10">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\65.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\65.jpg" alt="photo_11">
+        <a target="_blank" href="..\Photos\65.jpg">
+            <img src="..\Photos\65.jpg" alt="photo_11">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\27.PNG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\27.PNG" alt="photo_12">
+        <a target="_blank" href="..\Photos\27.PNG">
+            <img src="..\Photos\27.PNG" alt="photo_12">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\36.PNG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\36.PNG" alt="photo_13">
+        <a target="_blank" href="..\Photos\36.PNG">
+            <img src="..\Photos\36.PNG" alt="photo_13">
         </a>
         </div>
 
@@ -124,8 +124,8 @@
     </div>  
 
         <div id="photo_15">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\35.jpg">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\35.jpg" alt="photo_15">
+                <a target="_blank" href="..\Photos\35.jpg">
+            <img src="..\Photos\35.jpg" alt="photo_15">
         </a>
         </div>
 
@@ -134,14 +134,14 @@
     </div>  
 
         <div id="photo_16">
-                <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\59.PNG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\59.PNG" alt="photo_16">
+                <a target="_blank" href="..\Photos\59.PNG">
+            <img src="..\Photos\59.PNG" alt="photo_16">
         </a> 
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\58.PNG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\58.PNG" alt="photo_17">
+        <a target="_blank" href="..\Photos\58.PNG">
+            <img src="..\Photos\58.PNG" alt="photo_17">
         </a>
-        <a target="_blank" href="D:\Web\Pressbook_internet\pressbook\Photos\57.PNG">
-            <img src="D:\Web\Pressbook_internet\pressbook\Photos\57.PNG" alt="photo_18">
+        <a target="_blank" href="..\Photos\57.PNG">
+            <img src="..\Photos\57.PNG" alt="photo_18">
         </a>
         </div>
 
