--- a/HTML/lien_portfolio.html
+++ b/HTML/lien_portfolio.html
@@ -31,21 +31,21 @@
 
         <div class="gallery">
             <a href="travail_3.html">
-                  <img src="..\73.png" alt="travail">
+                  <img src="..\Photos\73.png" alt="travail">
             </a>
             <div class="desc">Réparation d’une terrasse en bois chez un particulier</div>
         </div>
 
         <div class="gallery">
             <a href="travail_5.html">
-                <img src="..\70.PNG" alt="travail" >
+                <img src="..\Photos\70.PNG" alt="travail" >
             </a>
             <div class="desc">Vue en isométrie et en axonométrie</div>
         </div>
 
         <div class="gallery">
             <a href="travail_4.html">
-                <img src="..\Photos\69.PNG" alt="travail" >
+                <img src="..\Photos\67.PNG" alt="travail" >
             </a>
             <div class="desc">Exercice deux points de fuite</div>
         </div>         
