--- a/HTML/lien_contact.html
+++ b/HTML/lien_contact.html
@@ -8,9 +8,9 @@
 <body>
     <ul>
         <li><a href="../index.html">Home</a></li>
-        <li style="left"><a href="lien_portfolio.html">Portfolio</a></li>
-        <li style="float:center"><a href="cv_audrey.html">Curriculum Vitae</a></li>
-        <li style="float:right"><a class="active" href="lien_contact.html">Contact</a></li>
+        <li><a href="lien_portfolio.html">Portfolio</a></li>
+        <li><a href="cv_audrey.html">Curriculum Vitae</a></li>
+        <li id="contact"><a class="active" href="lien_contact.html">Contact</a></li>
     </ul>
     
     <h1>Contact</h1>
