--- a/HTML/travail_2.html
+++ b/HTML/travail_2.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" type="text/css" media="screen" href="..\CSS\travail_2.css" />
 </head>
 <body>
+
         <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li style="left"><a class="active" href="lien_portfolio.html">Portfolio</a></li>
-                <li style="float:center"><a href="cv_audrey.html">Curriculum Vitae</a></li>
-                <li style="float:right"><a href="lien_contact.html">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a class="active" href="lien_portfolio.html">Portfolio</a></li>
+            <li><a href="cv_audrey.html">Curriculum Vitae</a></li>
+            <li id="contact"><a href="lien_contact.html">Contact</a></li>
         </ul>
 
         <h1>Proposition d’aménagement d’un jardin de particulier</h1>
