--- a/HTML/travail_6.html
+++ b/HTML/travail_6.html
@@ -9,9 +9,9 @@
 
         <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li style="left"><a class="active" href="lien_portfolio.html">Portfolio</a></li>
-                <li style="float:center"><a href="cv_audrey.html">Curriculum Vitae</a></li>
-                <li style="float:right"><a href="lien_contact.html">Contact</a></li>
+                <li><a class="active" href="lien_portfolio.html">Portfolio</a></li>
+                <li><a href="cv_audrey.html">Curriculum Vitae</a></li>
+                <li id="contact"><a href="lien_contact.html">Contact</a></li>
         </ul>
         
     <h1>Plan d’une maison pavillonnaire</h1>
