--- a/index.html
+++ b/index.html
@@ -8,18 +8,15 @@
 <body>  
     <ul>
         <li><a class="active" href="index.html">Home</a></li>
-        <li style="left"><a href="HTML/lien_portfolio.html">Portfolio</a></li>
-        <li style="float:center"><a href="HTML/cv_audrey.html">Curriculum Vitae</a></li>
-        <li style="float:right"><a href="HTML/lien_contact.html">Contact</a></li>
+        <li><a href="HTML/lien_portfolio.html">Portfolio</a></li>
+        <li><a href="HTML/cv_audrey.html">Curriculum Vitae</a></li>
+        <li id="contact"><a href="HTML/lien_contact.html">Contact</a></li>
     </ul>
 
     <div class="entete">
         <img src="Photos\32.jpg" alt="photo_1">
         <div class="titre">Infographie paysagère</H1></div>
         <div class="nom_prenom">Gallo Audrey</H1></div>
-    </div>
-    
-</div>
-        
+    </div>      
 </body>
 </html>
