Modifications des accents

--- a/HTML/lien_portfolio.html
+++ b/HTML/lien_portfolio.html
@@ -19,28 +19,28 @@
             <a href="travail_1.html">
                 <img src="..\Photos\10.jpg" alt="travail" >
             </a>
-            <div class="desc">Proposition d’aménagement d’une maison de retraite</div>
+            <div class="desc">Proposition d’am&eacute;nagement d’une maison de retraite</div>
         </div>
 
         <div class="gallery">
             <a href="travail_2.html">
               <img src="..\Photos\6.JPG" alt="travail" >
             </a>
-            <div class="desc">Proposition d’aménagement d’un jardin de particulier</div>
+            <div class="desc">Proposition d’am&eacute;nagement d’un jardin de particulier</div>
         </div>
 
         <div class="gallery">
             <a href="travail_3.html">
                   <img src="..\Photos\73.png" alt="travail">
             </a>
-            <div class="desc">Réparation d’une terrasse en bois chez un particulier</div>
+            <div class="desc">R&eacute;paration d’une terrasse en bois chez un particulier</div>
         </div>
 
         <div class="gallery">
             <a href="travail_5.html">
                 <img src="..\Photos\70.PNG" alt="travail" >
             </a>
-            <div class="desc">Vue en isométrie et en axonométrie</div>
+            <div class="desc">Vue en isom&eacute;trie et en axonom&eacute;trie</div>
         </div>
 
         <div class="gallery">
@@ -68,42 +68,42 @@
             <a href="travail_10.html">
                 <img src="..\Photos\24.png" alt="travail" >
             </a>
-            <div class="desc">Aménagement extérieur d’une maison de particulier</div>
+            <div class="desc">Am&eacute;nagement ext&eacute;rieur d’une maison de particulier</div>
         </div>
         
         <div class="gallery">
             <a href="travail_11.html">
                 <img src="..\Photos\46.png" alt="travail" >
             </a>
-            <div class="desc">Aménagement exterieur d’une villa</div>
+            <div class="desc">Am&eacute;nagement ext&eacute;rieur d’une villa</div>
         </div>        
 
         <div class="gallery">
             <a href="travail_12.html">
                 <img src="..\Photos\Capture 3.PNG" alt="travail" >
             </a>
-            <div class="desc">Projet d’aménagement d’un quartier  et d’un parc</div>
+            <div class="desc">Projet d’am&eacute;nagement d’un quartier  et d’un parc</div>
         </div> 
 
         <div class="gallery">
             <a href="travail_13.html">
                 <img src="..\Photos\GALLO TP - Toit Lorrain - Plan DCE.jpg" alt="travail" >
             </a>
-            <div class="desc">Création d’un DCE</div>
+            <div class="desc">Cr&eacute;ation d’un DCE</div>
         </div> 
 
         <div class="gallery">
             <a href="travail_14.html">
                 <img src="..\Photos\Arbres en perspective-exo étudiants.png" alt="travail" >
             </a>
-            <div class="desc">Aménagement d'une allée pietonne en ville</div>
+            <div class="desc">Am&eacute;nagement d'une all&eacute;e pi&eacute;tonne en ville</div>
         </div> 
       
         <div class="gallery">
             <a href="travail_7.html">
                 <img src="..\Photos\Gallo Audrey croquis.jpg" alt="travail" >
             </a>
-            <div class="desc">Plan intérieur d’une maison</div>
+            <div class="desc">Plan int&eacute;rieur d’une maison</div>
         </div>    
 
         <div class="gallery">
