--- a/HTML/travail_10.html
+++ b/HTML/travail_10.html
@@ -14,12 +14,12 @@
                 <li id="contact"><a href="lien_contact.html">Contact</a></li>
             </ul>
     
-    <h1>Aménagement extérieur d’une maison de particuler</h1>
+    <h1>Am&eacute;nagement ext&eacute;rieur d’une maison de particuler</h1>
 
-    <p>Ceci est un projet personnel d’un aménagement exterieur d’une maison individuel de particulier.</p>  
+    <p>Ceci est un projet personnel d’un am&eacute;nagement ext&eacute;rieur d’une maison individuel de particulier.</p>  
 
     <div id="sous_titre_1">
-        <h2>Documents graphiques d’un aménagement exterieur</h2>  
+        <h2>Documents graphiques d’un am&eacute;nagement ext&eacute;rieur</h2>  
     </div>  
 
         <div id="photo_1">
