--- a/HTML/travail_11.html
+++ b/HTML/travail_11.html
@@ -14,12 +14,12 @@
                 <li id="contact"><a href="lien_contact.html">Contact</a></li>
             </ul>
 
-    <h1>Aménagement  extérieur d’une villa</h1>
+    <h1>Am&eacute;nagement  ext&eacute;rieur d’une villa</h1>
 
-    <p>Ceci est un projet personnel d’un aménagement exterieur d’une villa.</p>  
+    <p>Ceci est un projet personnel d’un am&eacute;nagement ext&eacute;rieur d’une villa.</p>  
 
     <div id="sous_titre_1">
-        <h2>Documents graphiques de l’aménagement exterieur d’une villa</h2>  
+        <h2>Documents graphiques de l’am&eacute;nagement ext&eacute;rieur d’une villa</h2>  
     </div>  
 
         <div id="photo_1">
@@ -28,7 +28,7 @@
         </a>
         </div>
 
-    <p>Nous pouvons observer un premier aménagement consernant l’entrée de la villa avec un emplacements voitures ainsi que le parvis d’une maison. </p>
+    <p>Nous pouvons observer un premier am&eacute;nagement concernant l’entr&eacute;e de la villa avec un emplacements voitures ainsi que le parvis d’une maison. </p>
 
         <div id="photo_2">
                 <a target="_blank" href="..\Photos\43.png">
@@ -36,7 +36,7 @@
         </a>
         </div>
 
-    <p>Nous pouvons observer un second aménagement consernant l’arrière de la villa avec un espace terrasse et piscine et un espace jardin avec un potager.</p>
+    <p>Nous pouvons observer un second am&eacute;nagement consernant l’arri&egrave;re de la villa avec un espace terrasse et piscine et un espace jardin avec un potager.</p>
 
         <div id="photo_3">
                 <a target="_blank" href="..\Photos\39.png">
