--- a/HTML/travail_12.html
+++ b/HTML/travail_12.html
@@ -14,11 +14,11 @@
                 <li id="contact"><a href="lien_contact.html">Contact</a></li>
             </ul>
 
-    <h1>Projet d’aménagement d’un quartier et d’un parc</h1>
+    <h1>Projet d’am&eacute;nagement d’un quartier et d’un parc</h1>
 
-    <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysagère.</p>  
+    <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysag&egrave;re.</p>  
 
-    <p>Le but a été de proposer un aménagement de quartier et de crée un parc avec un plan d’eau.</p>
+    <p>Le but a &eacute;t&eacute; de proposer un am&eacute;nagement de quartier et de cr&eacute;e un parc avec un plan d’eau.</p>
 
     <div id="sous_titre_1">
         <h2>Documents graphiques</h2>  
