--- a/HTML/travail_13.html
+++ b/HTML/travail_13.html
@@ -16,9 +16,9 @@
 
     <h1>Dossier de Consultation des Entreprises</h1>
 
-    <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysagère.</p>  
+    <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysag&egrave;re.</p>  
 
-    <p>Le but a été de créer un DCE.</p>  
+    <p>Le but a &eacute;t&eacute; de cr&eacute;er un DCE.</p>  
 
         <div id="photo_1">
                 <a target="_blank" href="..\Photos\GALLO TP - Toit Lorrain - Plan DCE.jpg">
