--- a/HTML/travail_14.html
+++ b/HTML/travail_14.html
@@ -14,11 +14,12 @@
                 <li id="contact"><a href="lien_contact.html">Contact</a></li>
             </ul>
 
-    <h1>Aménagement d'une allée piétonne en ville</h1>
+    <h1>Am&eacute;nagement d'une all&eacute;e pi&eacute;tonne en ville</h1>
 
-    <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysagère.</p>  
+    <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysag&egrave;re.</p>  
 
-    <p>Le but a été de créer un aménagement d'une allée piétonne en ville en incorporant des ombres et en mettant en scène cette aménagement tout en respectant la technique de la perspective empirique.</p>
+    <p>Le but a &eacute;t&eacute; de cr&eacute;er un am&eacute;nagement d'une all&eacute;e pi&eacute;tonne en ville en incorporant des ombres et en mettant en sc&egrave;ne 
+        cette am&eacute;nagement tout en respectant la technique de la perspective empirique.</p>
 
     <div id="sous_titre_1">
         <h2>Documents graphiques</h2>  
