--- a/HTML/travail_2.html
+++ b/HTML/travail_2.html
@@ -14,14 +14,15 @@
             <li id="contact"><a href="lien_contact.html">Contact</a></li>
         </ul>
 
-        <h1>Proposition d’aménagement d’un jardin de particulier</h1>
+        <h1>Proposition d’am&eacute;nagement d’un jardin de particulier</h1>
 
-        <p> Ce projet à été réalisé dans le cadre de mon stage avec l’entreprise Les Paysagistes Français.</p>  
+        <p> Ce projet &agrave; &eacute;t&eacute; r&eacute;alis&eacute; dans le cadre de mon stage avec l’entreprise Les Paysagistes Français.</p>  
 
-        <p> Le maître d’ouvrage est un particulier habitant Evian-Les-Bains (Haute-Savoie). Il souhaite réaménager son jardin avec un côté de type jardin zen et un côté détente avec une piscine.</p> 
+        <p> Le ma&icirc;tre d’ouvrage est un particulier habitant Evian-Les-Bains (Haute-Savoie). 
+            Il souhaite r&eacute;am&eacute;nager son jardin avec un côt&eacute; de type jardin zen et un côt&eacute; d&eacute;tente avec une piscine.</p> 
   
     <div id="sous_titre_1">
-        <h2>Documents graphiques de la proposition d’aménagement au client </h2>  
+        <h2>Documents graphiques de la proposition d’am&eacute;nagement au client </h2>  
     </div>  
 
         <div id="photo_1">
