--- a/HTML/travail_4.html
+++ b/HTML/travail_4.html
@@ -16,9 +16,9 @@
 
     <h1>Exercice deux points de fuite</h1>
 
-        <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysagère.</p>  
+        <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysag&egrave;re.</p>  
 
-        <p>Le but a été de construite à partir d’un plan une représentation d’un jardin tout en respectant la technique des points de fuite.</p>
+        <p>Le but a &eacute;t&eacute; de construite &agrave; partir d’un plan une repr&eacute;sentation d’un jardin tout en respectant la technique des points de fuite.</p>
   
         <div id="sous_titre_1">
             <h2>Technique des deux points de fuite</h2>  
