--- a/HTML/travail_5.html
+++ b/HTML/travail_5.html
@@ -14,14 +14,14 @@
                 <li id="contact"><a href="lien_contact.html">Contact</a></li>
             </ul>
 
-    <h1>Proposition d’aménagement d’un jardin de particulier</h1>
+    <h1>Vue en isom&eacute;trie et en axonom&eacute;trie</h1>
 
-    <p> Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysagère.</p>  
+    <p> Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysag&egrave;re.</p>  
 
-    <p>Le but a été de construite à partir d’un plan une représentation d’un jardin tout en respectant les techniques d’axinométrie et d’Isonométrie.</p>
+    <p>Le but a &eacute;t&eacute; de construite &agrave; partir d’un plan une repr&eacute;sentation d’un jardin tout en respectant les techniques d’axinom&eacute;trie et d’Isom&eacute;trie.</p>
 
     <div id="sous_titre_1">
-        <h2>Technique de l’isométrie</h2>  
+        <h2>Technique de l’isom&eacute;trie</h2>  
     </div>  
 
         <div id="photo_1">
@@ -34,7 +34,7 @@
         </div>
 
     <div id="sous_titre_2">
-        <h2>Technique de l’axonométrie</h2>  
+        <h2>Technique de l’axonom&eacute;trie</h2>  
     </div> 
 
         <div id="photo_3">
