--- a/HTML/travail_6.html
+++ b/HTML/travail_6.html
@@ -16,9 +16,9 @@
         
     <h1>Plan d’une maison pavillonnaire</h1>
 
-    <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysagère.</p>  
+    <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysag&egravere.</p>  
 
-    <p>Le but a été de construire le plan de l’interieur d’une maison en respectant les dimensions d’un plan et d’importer du mobilier.</p>
+    <p>Le but a &eacute;t&eacute; de construire le plan de l’int&eacute;rieur d’une maison en respectant les dimensions d’un plan et d’importer du mobilier.</p>
 
     <div id="sous_titre_1">
         <h2>Documents techniques</h2>  
