--- a/HTML/travail_7.html
+++ b/HTML/travail_7.html
@@ -14,11 +14,11 @@
                 <li id="contact"><a href="lien_contact.html">Contact</a></li>
         </ul>
 
-    <h1>Plan intérieur d’une maison</h1>
+    <h1>Plan int&eacute;rieur d’une maison</h1>
 
-    <p> Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysagère.</p>  
+    <p> Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysag&egrave;re.</p>  
 
-    <p>Le but a été de construire le plan de l’interieur d’une maison en respectant les dimensions d’un plan et d’importer du mobilier tout en les mettant à l’echelle. </p>
+    <p>Le but a &eacute;t&eacute; de construire le plan de l’interieur d’une maison en respectant les dimensions d’un plan et d’importer du mobilier tout en les mettant à l’&eacute;chelle. </p>
 
     <div id="sous_titre_1">
         <h2>Document technique</h2>  
