--- a/HTML/travail_8.html
+++ b/HTML/travail_8.html
@@ -16,9 +16,9 @@
 
     <h1>Coupe technique</h1>
 
-    <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysagère.</p>  
+    <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysag&egrave;re.</p>  
 
-    <p>Le but a été de construire la coupe technique d’un panneau de facade et d’un garde corp.</p>
+    <p>Le but a &eacute;t&eacute; de construire la coupe technique d’un panneau de facade et d’un garde corp.</p>
 
     <div id="sous_titre_1">
         <h2>Documents techniques</h2>  
