--- a/HTML/travail_9.html
+++ b/HTML/travail_9.html
@@ -27,7 +27,7 @@
         </div>
 
     <div id="sous_titre_2">
-        <h2>Forêt champètre dans le massifs des Alpes</h2>  
+        <h2>For&ecirc;t champ&egrave;tre dans le massifs des Alpes</h2>  
     </div>  
 
         <div id="photo_2">
@@ -37,7 +37,7 @@
         </div>
 
     <div id="sous_titre_3">
-        <h2>Paysage dans le massifs des Alpes</h2>  
+        <h2>Paysage du massif des Alpes</h2>  
     </div>  
 
         <div id="photo_3">
@@ -67,7 +67,7 @@
     </div>
 
     <div id="sous_titre_6">
-        <h2>Parc Paul Mistral à Grenoble</h2>  
+        <h2>Parc Paul Mistral &acirc; Grenoble</h2>  
     </div>  
 
         <div id="photo_6">
@@ -77,7 +77,7 @@
         </div>
 
     <div id="sous_titre_7">
-        <h2>Croquis d’un calpinage avec mélanges de minéraux et de végétaux</h2>  
+        <h2>Croquis d’un calpinage avec m&eacute;langes de min&eacute;raux et de v&eacute;g&eacute;taux</h2>  
     </div>  
 
         <div id="photo_7">
@@ -130,7 +130,7 @@
         </div>
 
     <div id="sous_titre_11">
-        <h2>Dessins à l’aquarelle</h2>  
+        <h2>Dessins &agrave; l’aquarelle</h2>  
     </div>  
 
         <div id="photo_16">
