--- a/HTML/travail_3.html
+++ b/HTML/travail_3.html
@@ -14,11 +14,12 @@
                 <li id="contact"><a href="lien_contact.html">Contact</a></li>
             </ul>
 
-    <h1>Réparation d’une terrasse en bois chez un particulier</h1>
+    <h1>R&eacute;paration d’une terrasse en bois chez un particulier</h1>
 
-    <p> Ce projet à été realisé dans la cadre de mon stage avec l’entreprise Les Paysagistes Français.</p>
+    <p> Ce projet &agrave; &eacute;t&eacute; realis&eacute; dans la cadre de mon stage avec l’entreprise Les Paysagistes Français.</p>
     
-    <p> Le maître d’ouvrage est un particulier habitant à Champier (Isère). Il souhaite réparer sa terrasse en bois exotique. Une analyse a dans un premier temps été faite afin de connaîte les causes du problème.</p> 
+    <p> Le ma&icirc;tre d’ouvrage est un particulier habitant &agrave; Champier (Is&egrave;re). 
+        Il souhaite r&eacute;parer sa terrasse en bois exotique. Une analyse a dans un premier temps &eacute;t&eacute; faite afin de conna&icirc;te les causes du probl&egrave;me.</p> 
 
     <div id="sout_titre_1">
         <h2>Documents graphiques de la de la terrasse en bois</h2>  
