--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="entete">
         <img src="Photos\32.jpg" alt="photo_1">
-        <div class="titre">Infographie paysagère</H1></div>
+        <div class="titre">Infographie paysag&egrave;re</H1></div>
         <div class="nom_prenom">Gallo Audrey</H1></div>
     </div>      
 </body>
