--- a/HTML/cv_audrey.html
+++ b/HTML/cv_audrey.html
@@ -35,7 +35,7 @@
 				<div class="exp_pro">
 					<h2>Stage de 1&egrave;re ann&eacute;e de BTSA Am&eacute;nagement Paysager</h2>
 					<p class="dates">avril 2017 – 1 mois</p>
-					<p class="entreprise">Grenoble Alpes M&eacutetropole</p>
+					<p class="entreprise">Grenoble Alpes M&eacute;tropole</p>
 					<p class="description">Conc&eacute;ption et cr&eacute;ation d’une mare, de zones humides et am&eacute;nagements de celle-ci et de ses environs - 
 						Animation jardinage et biodiversit&eacute; - responsabilit&eacute; de chef d’&eacute;quipe.</p>
 				</div>
