--- a/HTML/cv_audrey.html
+++ b/HTML/cv_audrey.html
@@ -43,7 +43,7 @@
 				<div class="exp_pro">
 					<h2>Stage d’observation</h2>
 					<p class="dates">d&eacute;cembre 2012 – 1 semaine</p>
-					<p class="entreprise">Laboratoire d’Ecologie Alpine (LECA) &agrave l’Universit&eacute; Grenoble Alpes de Saint Martin d’H&egrave;res.</p>
+					<p class="entreprise">Laboratoire d’Ecologie Alpine (LECA) &agrave; l’Universit&eacute; Grenoble Alpes de Saint Martin d’H&egrave;res.</p>
 					<p class="description">Approche du m&eacute;tier de chercheur en botanique, biologie, environnement, pollution et biodiversit&eacute;.</p>
 				</div>
 			</div>
