cm en px et photo cv ajouter

--- a/HTML/cv_audrey.html
+++ b/HTML/cv_audrey.html
@@ -13,7 +13,7 @@
 			</div>
 			
 			<div id="photo">
-				<img src="#" alt="photo">
+				<img src="https://photos.smugmug.com/Other/Événements-et-promo/LPIP-2018-2019/n-xpT3FL/i-BLnP4S4/0/e18491da/L/i-BLnP4S4-L.jpg" alt="photo">
 			</div>
 
 			<div id="exp_pro">
