--- a/HTML/lien_portfolio.html
+++ b/HTML/lien_portfolio.html
@@ -13,7 +13,7 @@
         <li id="contact"><a href="lien_contact.html">Contact</a></li>
     </ul>
 
-        <h1>Sommaire</h1>
+    <h1>Sommaire</h1>
 
         <div class="gallery">
             <a href="travail_1.html">
@@ -33,7 +33,7 @@
             <a href="travail_3.html">
                   <img src="..\Photos\73.png" alt="travail">
             </a>
-            <div class="desc">R&eacute;paration d’une terrasse en bois chez un particulier</div>
+            <div class="desc">R&eacute;paration d’une terrasse en bois</div>
         </div>
 
         <div class="gallery">
@@ -68,7 +68,7 @@
             <a href="travail_10.html">
                 <img src="..\Photos\24.png" alt="travail" >
             </a>
-            <div class="desc">Am&eacute;nagement ext&eacute;rieur d’une maison de particulier</div>
+            <div class="desc">Am&eacute;nagement ext&eacute;rieur d’une maison</div>
         </div>
         
         <div class="gallery">
@@ -103,7 +103,7 @@
             <a href="travail_7.html">
                 <img src="..\Photos\Gallo Audrey croquis.jpg" alt="travail" >
             </a>
-            <div class="desc">Plan int&eacute;rieur d’une maison</div>
+            <div class="desc">Plan int&eacute;rieur maison</div>
         </div>    
 
         <div class="gallery">
