--- a/HTML/travail_10.html
+++ b/HTML/travail_10.html
@@ -14,7 +14,7 @@
                 <li id="contact"><a href="lien_contact.html">Contact</a></li>
             </ul>
     
-    <h1>Am&eacute;nagement ext&eacute;rieur d’une maison de particuler</h1>
+    <h1>Am&eacute;nagement ext&eacute;rieur d’une maison</h1>
 
     <p>Ceci est un projet personnel d’un am&eacute;nagement ext&eacute;rieur d’une maison individuel de particulier.</p>  
 
