--- a/HTML/travail_3.html
+++ b/HTML/travail_3.html
@@ -14,7 +14,7 @@
                 <li id="contact"><a href="lien_contact.html">Contact</a></li>
             </ul>
 
-    <h1>R&eacute;paration d’une terrasse en bois chez un particulier</h1>
+    <h1>R&eacute;paration d’une terrasse en bois</h1>
 
     <p> Ce projet &agrave; &eacute;t&eacute; realis&eacute; dans la cadre de mon stage avec l’entreprise Les Paysagistes Français.</p>
     
