--- a/HTML/travail_7.html
+++ b/HTML/travail_7.html
@@ -14,7 +14,7 @@
                 <li id="contact"><a href="lien_contact.html">Contact</a></li>
         </ul>
 
-    <h1>Plan int&eacute;rieur d’une maison</h1>
+    <h1>Plan int&eacute;rieur maison</h1>
 
     <p> Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysag&egrave;re.</p>  
 
