--- a/HTML/lien_contact.html
+++ b/HTML/lien_contact.html
@@ -13,6 +13,8 @@
         <li id="contact"><a class="active" href="lien_contact.html">Contact</a></li>
     </ul>
     
+    <img src="../Photos\32.jpg" alt="photo_1" id="image_fond">
+
     <h1>Contact</h1>
 
     <h2>GALLO Audrey</h2>
@@ -23,8 +25,7 @@
         <p>06.38.47.98.22</p>
     </div>
 
-    <p>
-        <img src="../Photos\20181029_164538.jpg" alt="photo_1">
-    </p>
+    <img src="../Photos\20181029_164538.jpg" alt="photo_1" id="photo_profil">
+
 </body>
 </html>
