--- a/HTML/travail_2.html
+++ b/HTML/travail_2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>GalloAudreyPortfolio</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="..\CSS\travail_2.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="..\CSS\travaux.css" />
 </head>
 <body>
 
