--- a/HTML/travail_13.html
+++ b/HTML/travail_13.html
@@ -20,6 +20,10 @@
 
     <p>Le but a &eacute;t&eacute; de cr&eacute;er un DCE.</p>  
 
+    <div id="sous_titre_1">
+            <h2>document technique</h2>  
+    </div>
+
         <div id="photo_1">
                 <a target="_blank" href="..\Photos\GALLO TP - Toit Lorrain - Plan DCE.jpg">
             <img src="..\Photos\GALLO TP - Toit Lorrain - Plan DCE.jpg" alt="photo_1">
