mise en forme correct html

--- a/HTML/travail_13.html
+++ b/HTML/travail_13.html
@@ -12,23 +12,23 @@
                 <li><a class="active" href="lien_portfolio.html">Portfolio</a></li>
                 <li><a href="cv_audrey.html">Curriculum Vitae</a></li>
                 <li id="contact"><a href="lien_contact.html">Contact</a></li>
-            </ul>
+        </ul>
 
-    <h1>Dossier de Consultation des Entreprises</h1>
+                <h1>Dossier de Consultation des Entreprises</h1>
 
-    <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysag&egrave;re.</p>  
+                <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysag&egrave;re.</p>  
 
-    <p>Le but a &eacute;t&eacute; de cr&eacute;er un DCE.</p>  
+                <p>Le but a &eacute;t&eacute; de cr&eacute;er un DCE.</p>  
 
-    <div id="sous_titre_1">
-            <h2>document technique</h2>  
-    </div>
+                <div id="sous_titre_1">
+                        <h2>Document technique</h2>  
+                </div>
 
-        <div id="photo_1">
-                <a target="_blank" href="..\Photos\GALLO TP - Toit Lorrain - Plan DCE.jpg">
-            <img src="..\Photos\GALLO TP - Toit Lorrain - Plan DCE.jpg" alt="photo_1">
-        </a>
-        </div>
+                        <div id="photo_1">
+                                        <a target="_blank" href="..\Photos\GALLO TP - Toit Lorrain - Plan DCE.jpg">
+                                <img src="..\Photos\GALLO TP - Toit Lorrain - Plan DCE.jpg" alt="photo_1">
+                                        </a>
+                        </div>
 
 </body>
 </html>
