--- a/HTML/travail_16.html
+++ b/HTML/travail_16.html
@@ -18,26 +18,26 @@
 
         <p> Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysag&egrave;re.</p>  
 
-        <p>Le but a &eacute;t&eacute; d'habiller un croquis coupe de jours et de nuit &agrave; l'aide du logiciel Photoshop</p>
+        <p>Le but a &eacute;t&eacute; d'habiller un croquis coupe de jours et de nuit &agrave; l'aide du logiciel Photoshop.</p>
         
         <div id="sous_titre_1">
             <h2>Croquis coupe jours</h2>  
         </div> 
 
             <div id="photo_1">
-            <a target="_blank" href="..\Photos\91.jpg">
+                    <a target="_blank" href="..\Photos\91.jpg">
                 <img src="..\Photos\91.jpg" alt="photo_1">
-            </a>
+                    </a>
 
         <div id="sous_titre_1">
             <h2>Croquis coupe nuit</h2>  
         </div>
 
-        <div id="photo_1">
-            <a target="_blank" href="..\Photos\92.jpg">
+            <div id="photo_1">
+                    <a target="_blank" href="..\Photos\92.jpg">
                 <img src="..\Photos\92.jpg" alt="photo_2">
-            </a>
-        </div>
+                    </a>
+            </div>
          
 </body>
 </html>
