--- a/HTML/travail_17.html
+++ b/HTML/travail_17.html
@@ -16,7 +16,7 @@
 
         <h1>Tablette graphique</h1>
 
-        <p>Voici quelques dessins r&eacute;alis&eacute; &agrave; l'aide de la tablette graphique</p>
+        <p>Voici quelques dessins r&eacute;alis&eacute; &agrave; l'aide de la tablette graphique.</p>
         
         <div id="sous_titre_1">
             <h2>croquis tablette graphique</h2>  
@@ -46,7 +46,6 @@
                 <a target="_blank" href="..\Photos\106.jpg">
                     <img src="..\Photos\106.jpg" alt="photo_1">
                 </a>
-
             </div>
          
 </body>
