--- a/HTML/travail_19.html
+++ b/HTML/travail_19.html
@@ -16,8 +16,9 @@
 
         <h1>Habillage d'un plan</h1>
 
-        <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysag&egrave;re.</p>  
-        <p>Le but a &eacute;t&eacute; d'habiller un plan &agrave; l'aide du logiciel Photoshop</p>
+        <p>Ceci est le rendu d’un exercice de licence professionnelle Infographie Paysag&egrave;re.</p> 
+         
+        <p>Le but a &eacute;t&eacute; d'habiller un plan &agrave; l'aide du logiciel Photoshop.</p>
         
         <div id="sous_titre_1">
             <h2>habillage d'un plan</h2>  
