--- a/HTML/cv_audrey.html
+++ b/HTML/cv_audrey.html
@@ -84,7 +84,7 @@
 			
 			<div id="extra_pro">
 				<div id="langues">
-					<h1>langues</h1>
+					<h1>Langues</h1>
 					<ul>
 						<li class="ls_langues">Anglais moyen</li>
 						<li class="ls_langues">Italien bon</li>
@@ -95,7 +95,7 @@
 					<h1>Extra professionnel</h1>
 					<ul>
 						<li class="ls_loisirs">Dessin</li>
-						<li class="ls_loisirs">Ski nordique</li>
+						<li class="ls_loisirs">Ski alpin</li>
 						<li class="ls_loisirs">Natation</li>
 						<li class="ls_loisirs">V&eacute;lo</li>
 					</ul>	
