--- a/HTML/cv_audrey.html
+++ b/HTML/cv_audrey.html
@@ -3,7 +3,7 @@
 	<head>
 			<meta charset="utf-8" />
 			<title>GalloAudreyPortfolio</title>
-			<link rel="stylesheet" href="..\CSS\cv_audrey.css" />
+			<link rel="stylesheet" href="..\CSS\css_cv.css" />
 	</head>
 	
 		<body>
@@ -22,7 +22,7 @@
 					<h2>Stage de 2&egrave;me ann&eacute;e de BTSA Am&eacute;nagement Paysager</h2>
 					<p class="dates">octobre et novembre 2017 – 2 mois</p>
 					<p class="entreprise">Les Paysagistes Français</p>
-					<p class="description">conc&eacute;ption, cr&eacute;ation, ma&ccedil;onnerie paysag&egrave;re, entretien, rendez-vous avec les clients.</p>
+					<p class="description">Conc&eacute;ption, cr&eacute;ation, ma&ccedil;onnerie paysag&egrave;re, entretien, rendez-vous avec les clients.</p>
 				</div>
 
 				<div class="exp_pro">
